--- a/modal/templates/modal.html
+++ b/modal/templates/modal.html
@@ -1,13 +1,14 @@
 <div>
 	<div class="modal-header">
-		<button type="button" class="close pull-right" ng-click="$dismiss()" aria-hidden="true">&times;</button>
-		<h4 class="modal-title">Modal title</h4>
+		<h3 class="modal-title">Modal title</h3>
 	</div>
+
 	<div class="modal-body">
-		<p>Body&hellip;</p>
+        <p>Body&hellip;</p>
 	</div>
+
 	<div class="modal-footer">
-		<button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
-		<button type="button" class="btn btn-primary">Save changes</button>
+		<input type="submit" class="btn btn-primary" ng-click="ok()">Save</input>
+		<input type="button" class="btn btn-warning" ng-click="cancel()">Cancel</input>
 	</div>
 </div>
